Fix parallax clipping issue

--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -128,7 +128,7 @@
 
 	.parallax-layer {
 		position: absolute;
-		top: 150px;
+		/* top: 150px; */
 		left: 0;
 		width: 100%;
 		height: 100vh;
